--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>A function must be first defined and then called in order to work.</li>
       </ul>
     </section>
   </main>
